# ai-accelerator-sdk

./: CMakeLists.txt  README.md  accelerator.cpp
include/ai_accelerator_sdk/: inference_engine.h
src/: main.cpp
